tests/semantic/term_err2.mtp
(*Attempt multiplying with string literal*)
var a : integer;

begin
	a := 1 * 'error' div 3
end.